turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:15: error: identifier expected but ')' found.
    setCouleur(Color.)
                     ^