turtleart.diskfour.DiskFour.scala.code
override def run() {
  var x:Double = getX()
  var y:Double = getY()
  for(i <- 1 to 4) {
    for(j <- 1 to 90) {
      avance(100)
      setPos(x, y)
      droite(1)
    }
		i match {
      case 2 => setCouleur(Color.RED)
      case 3 => setCouleur(Color.YELLOW)
      case 4 => setCouleur(Color.BLUE)
    }
    setCouleur(Color.)
  }
}